--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,6 +10,10 @@
       box-shadow: 0px 20px 35px rgba(1, 1, 1, 0.08);
       transform: translateY(-5px);
     }
+
+    .plus {
+      cursor: pointer;
+    }
   
     .favorite {
       position: absolute;
